--- a/notes-app/src/App.css
+++ b/notes-app/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin: 20px;
-  background-color: lightgrey;
+  background-color: lightblue;
 }
 
 .app-container {
@@ -66,7 +66,7 @@ input {
 
 .note-form button {
   border-radius: 5px;
-  background-color: rgb(64, 154, 184);
+  background-color: darkblue;
   border: none;
   padding: 10px;
   font-size: 16px;
